# face_recognition

./: .gitignore  face_recognition.sln
face_recognition/: .gitignore  CMakeLists.txt  Makefile  face_recognition.cpp  face_recognition.vcxproj  face_recognition.vcxproj.filters  face_recognizer.h  main_window.h
face_recognition (copy)/: CMakeLists.txt
face_recognition (copy)/include/: face_recognizer.h  main_window.h
face_recognition (copy)/src/: CMakeLists.txt  face_recognition.cpp  main_window.cpp
face_recognition/build_release/: CMakeCache.txt  Makefile  cmake_install.cmake
face_recognition/build_release/src/: Makefile  cmake_install.cmake
face_recognition/include/: face_recognizer.h  main_window.h
face_recognition/src/: CMakeLists.txt  face_recognition.cpp
